WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129760
Fix write barriers in Repatch.cpp for !ENABLE(DFG_JIT) platforms after
r165128
https://bugs.webkit.org/show_bug.cgi?id=129760
Summary
Fix write barriers in Repatch.cpp for !ENABLE(DFG_JIT) platforms after r165128
Mark Hahnenberg
Reported
2014-03-05 15:03:05 PST
r165128
disabled the write barrier fast path for inline caches on !ENABLE(DFG_JIT) platforms. The fix is to refactor the write barrier code into AssemblyHelpers and use that everywhere.
Attachments
Patch
(10.16 KB, patch)
2014-03-05 19:31 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2014-03-05 19:31:40 PST
Created
attachment 225939
[details]
Patch
Geoffrey Garen
Comment 2
2014-03-05 20:27:16 PST
Comment on
attachment 225939
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-03-06 11:55:08 PST
Comment on
attachment 225939
[details]
Patch Clearing flags on attachment: 225939 Committed
r165203
: <
http://trac.webkit.org/changeset/165203
>
WebKit Commit Bot
Comment 4
2014-03-06 11:55:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug